--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    background-color: #28293E;
+    color: #FFFFFF;
+  }
+}
+
+@layer components {
+  .transparent-btn {
+    @apply uppercase text-sm font-medium border px-6 py-2 rounded hover:bg-[#EF6D58]
+  }
+}
