--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,8 @@
   .transparent-btn {
     @apply uppercase text-sm font-medium border px-6 py-2 rounded hover:bg-[#EF6D58]
   }
+
+  .filled-btn {
+    @apply uppercase text-sm font-medium px-6 py-2 rounded bg-[#EF6D58] hover:bg-[#f35c44]
+  }
 }
